# debian-statistics-tool

./: README.md  pyproject.toml
package_statistics/: __main__.py  contents_analyzer.py
package_statistics/config/: constants.py
